# RustApp

./: .gitignore  Cargo.toml  README.md  settings.json
src/: error.rs  main.rs  settings.rs
src/persistence/: game.rs  game_event.rs  mod.rs
src/services/: mod.rs  persistence_service.rs
