[package]
name = "RustApp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.69"
tempfile = "3.20.0"
sled = "0.34"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
